--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam.csproj
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam.csproj
@@ -129,7 +129,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\Perfil.cshtml" />
+    <Content Include="Views\User\Lista_Empresas.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
