--- a/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam.csproj
+++ b/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam/ProjetoHackatonIncredibleHihgSpeedTeam.csproj
@@ -141,9 +141,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CarreiraController.cs" />
     <Compile Include="Controllers\EmpresaController.cs" />
     <Compile Include="Controllers\EscolaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\QualificacaoController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -226,6 +228,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\User\Perfil.cshtml" />
     <Content Include="Views\User\Lista_Empresas.cshtml" />
+    <Content Include="Views\Qualificacao\Editar.cshtml" />
+    <Content Include="Views\Qualificacao\Inserir.cshtml" />
+    <Content Include="Views\Qualificacao\Lista.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -235,6 +240,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Carreira\" />
     <Folder Include="Views\Escola\" />
   </ItemGroup>
   <ItemGroup>
